fixed alignment of team panels and buttons

--- a/src/components/CurrentUser.scss
+++ b/src/components/CurrentUser.scss
@@ -1,7 +1,16 @@
 .TeamSelection {
-  
+
 }
 
 .TeamSelection__heading {
   text-align: center;
+}
+
+.team-panel {
+  margin: 10px 0px 0px 45px
+}
+
+.sign-out-button {
+  text-align: center;
+  margin-top: 30px;
 }
